# dickey-sovereign-core

./: .gitignore  LICENSE  README.md  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  build_tactile_onnx.py  cti_bridge.py  dickey_sovereign_core.py  digital_twin_ingest.py  fusion_physics.py  fusion_telemetry.py  galactic_nav.py  logistics_matrix.py  power_electronics.py  tactile_net.py  tactile_qctb.py  tactile_telemetry.py  threat_intel_cvss.py  vm_bridge.py
cti/: __init__.py  config.py  correlator.py  crypto_graph.py  graph_rag.py  ops_math.py  pipeline.py  schema.sql  sovereign-cti.service  watchlist.json
data/: fusion_audit_2026-07-04.json  power_audit_summit_2026-07-16.json
scripts/: push_to_github.sh
tactile/: CMakeLists.txt  TactileInferenceLoop.cpp  TactileInferenceLoop.hpp  tactile_demo.cpp
tests/: __init__.py  test_fusion_physics.py  test_power_electronics.py  test_tactile_qctb.py
